src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Helper that will be use on the Scenario definition and to create a list view of active Items</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BoardMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Board Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <inlineHelpText>Contact Type for to match with this Item</inlineHelpText>
        <label>Contact Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ContactType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DistributionOption__c</fullName>
        <inlineHelpText>Select if you want this item to be distributed by Contact of to be given to the entire Room</inlineHelpText>
        <label>Distribution Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Room</fullName>
                </value>
                <value>
                    <fullName>Per Contacts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ItemType__c</fullName>
        <label>Item Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ItemType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LanguageAvailable__c</fullName>
        <label>Language Available</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Bilingual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NextTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select the poster that has to be next to this Med Action Item</description>
        <label>Next to</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only a poster&apos;s item can be selected</errorMessage>
            <filterItems>
                <field>Item__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Poster</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Next to Med Action</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PatientType__c</fullName>
        <label>Patient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PatientType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personalized__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Define if this item is personalized to contacts when distributed</inlineHelpText>
        <label>Personalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DY</fullName>
                </value>
                <value>
                    <fullName>PY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RelatedToItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field that will bind two posters together</description>
        <label>RelatedToItem</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Items (Related To)</relationshipLabel>
        <relationshipName>RelatedToItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Size</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <inlineHelpText>Match with the Speciality of the Site Related Contact</inlineHelpText>
        <label>Speciality</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Speciality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SponsorProduct__c</fullName>
        <label>Sponsor Product</label>
        <referenceTo>SponsorProduct__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubItemBoard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Board can be attached to an Poster</errorMessage>
            <filterItems>
                <field>SubItemBoard__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Board</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SubItemBoard__c</referenceTo>
        <relationshipLabel>Items - Poster</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thickness__c</fullName>
        <inlineHelpText>Base Item Thickness</inlineHelpText>
        <label>Thickness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <recordTypes>
        <fullName>MedAction</fullName>
        <active>true</active>
        <label>Med Action</label>
    </recordTypes>
    <recordTypes>
        <fullName>NonDisplayMaterial</fullName>
        <active>true</active>
        <label>Non Display Material</label>
    </recordTypes>
    <recordTypes>
        <fullName>Poster</fullName>
        <active>true</active>
        <label>Poster</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>